feat: implement transaction DTOs, category validation and full test coverage