@@ -1,6 +1,8 @@
 package com.dustin.fintrack.service;
 
 import com.dustin.fintrack.controller.exception.ResourceNotFoundException;
+import com.dustin.fintrack.dto.v1.request.TransactionRequestDTO;
+import com.dustin.fintrack.model.Category;
 import com.dustin.fintrack.model.Transaction;
 import com.dustin.fintrack.repository.TransactionRepository;
 import com.dustin.fintrack.repository.CategoryRepository;
@@ -9,8 +11,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-import com.dustin.fintrack.dto.v1.TransactionDTO;
+import com.dustin.fintrack.dto.v1.response.TransactionResponseDTO;
 
 @Service
 @RequiredArgsConstructor
@@ -20,24 +23,27 @@ public class TransactionService {
     private final CategoryRepository categoryRepository;
 
     @Transactional
-    public TransactionDTO create(Transaction transaction) {
-        if (transaction.getCategory() == null || transaction.getCategory().getId() == null) {
-            throw new RuntimeException("Transaction must have a valid category.");
-        }
+    public TransactionResponseDTO create(TransactionRequestDTO request) {
 
-        categoryRepository.findById(transaction.getCategory().getId())
-                .orElseThrow(() -> new ResourceNotFoundException(transaction.getCategory().getId()));
+        Category category = categoryRepository.findById(request.getCategoryId())
+                .orElseThrow(() -> new ResourceNotFoundException(request.getCategoryId()));
 
+        Transaction transaction = new Transaction();
+        transaction.setDescription(request.getDescription());
+        transaction.setAmount(request.getAmount());
+        transaction.setDate(request.getDate());
+        transaction.setType(request.getType());
+        transaction.setCategory(category);
         Transaction savedTransaction = transactionRepository.save(transaction);
 
-        return new TransactionDTO(savedTransaction);
+        return new TransactionResponseDTO(savedTransaction);
     }
 
-    public List<TransactionDTO> listAll() {
-        List<Transaction> transactions = transactionRepository.findAll();
-
-        return transactions.stream()
-                .map(TransactionDTO::new)
-                .toList();
+    @Transactional(readOnly = true)
+    public List<TransactionResponseDTO> listAll() {
+        return transactionRepository.findAll()
+                .stream()
+                .map(TransactionResponseDTO::new)
+                .collect(Collectors.toList());
     }
 }
